# tinycbor

./: '  CHANGELOG.md  Cargo.toml  DESIGN.md  LICENSE  README.md  expanded.rs
.github/: codecov.yml
.github/workflows/: check.yml  safety.yml  test.yml
benches/: address-book.rs
derive/: Cargo.toml  README.md  expanded.rs
derive/src/: ast.rs  lib.rs  main.rs
derive/src/ast/: field.rs  variant.rs
src/: CHANGELOG.md  bytes.rs  collections.rs  container.rs  encoded.rs  lib.rs  num.rs  primitive.rs  stream.rs  string.rs  tag.rs  wrapper.rs
src/collections/: fixed.rs  map.rs
src/container/: bounded.rs  map.rs
src/num/: nonzero.rs
tests/: empty.rs  naked.rs  newtype.rs  proptest.rs  recursive.rs  rfc.rs
