[package]
name = "tinycbor-derive"
version = "0.10.0"
authors = ["Charles Edward Gagnon"]
edition = "2024"
description = "Derive tinycbor traits."
repository = "https://github.com/carloskiki/tinycbor"
license = "MIT"
keywords = ["cbor", "serialization", "encoding", "no_std"]
categories = ["encoding"]
rust-version = "1.88.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["derive", "visit-mut"] }
heck = "0.5"

# Keep the main crate in sync, preventing version mismatches.
[target.'cfg(false)'.dependencies]
tinycbor = { version = "0.10.0", path = "../" }

[dev-dependencies]
tinycbor = { path = "../" }
